--- a/public/css/app.css
+++ b/public/css/app.css
@@ -37,6 +37,9 @@
   --font-family-sans-serif: "Nunito", sans-serif;
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
+.nav-responsive {
+  size: 50px;
+}
 
 *,
 *::before,
